Version 2.0.0
Migrated to Java 8. semblance-java8 project is removed, its contents
merged to semblance-java.

Ditched Smooth library in favour of Java 8 streams and Guava
  collections. Some of the functionality is now integrated into
  Semblance itself

Updated POM versions.